--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,121 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 20%;
-    background-color: #851313;
+    width: 18%;
+    background-color: white;
     height: 100vh;
     position: fixed;
     overflow: auto;
     box-sizing: border-box;
     flex-direction: column;
-    
+    display: flex;
 }
-    
 
+.profile {
+    border: 0.2rem solid #e8ebe4;
+    height: 10%;
+    box-sizing: border-box;
+    align-items: center;
+}
+
+.small-thumbnail {
+    border-radius: 50%;
+    width:45px;
+    border-color: fff;
+    border: 1px solid #e8ebe4;
+    float: left;
+    margin-right: 9px;
+    margin-left: 20px;
+    margin-top: 15px;
+}
+
+.icon {
+    color: gray;
+    font-size: larger;
+}
+
+.chat-cta-button-container {
+    height: 20%;
+    font-family: "Roboto", Times, serif;
+    background-color: #a491d2;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    border: 3rem solid white
+}
+
+.chat-cta-button {
+    font-weight: 400;
+    background-color: #a491d2;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.user-name {
+    font-family: "Roboto", Times, serif;
+    color: #1b1f21;
+    font-size: larger;
+    margin-top: 20px;
+}
+
+.current-status {
+    font-family: "Open Sans", Times, serif;
+    font-size: small;
+    color: #969695;
+
+}
+
+.cards {
+    background-color: white;
+    border: 0.2rem solid #e8ebe4;
+    box-sizing: border-box;
+    width: 100%;
+    height: 13%;
+    padding: 5px;
+    align-items: center;        
+}
+
+.big-thumbnail {
+    border-radius: 50%;
+    width:60px;
+    border-color: fff;
+    border: 3px solid #e8ebe4;
+    float: left;
+    margin-right: 10px;
+    align-items: center;
+}
+
+.card-header {
+    font-family: "Roboto", Times, serif;
+    font-weight: 400;
+    padding: 1px 1px;
+    align-items: center;
+}
+
+.card-body {
+    font-family: "Open Sans", Times, serif;
+    font-weight: 300;
+    padding: 2px 2px;
+    align-items: center;
+}
+
+.main {
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.main h1 {
+    font-family: "Roboto", Times, serif;
+    font-weight: 400;
+    align-items: center;
+}
+
+.main h2 {
+    font-family: "Open Sans", Times, serif;
+    font-weight: 400;
+    align-items: center;
+    text-align: center;
+}
