--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,17 +6,21 @@
     background-color: white;
     height: 100vh;
     position: fixed;
-    overflow: auto;
+    overflow: hidden;
     box-sizing: border-box;
     flex-direction: column;
     display: flex;
 }
 
 .profile {
+    background-color: white;
     border: 0.2rem solid #e8ebe4;
-    height: 10%;
     box-sizing: border-box;
+    width: 100%;
+    height: 13%;
+    padding: 5px;
     align-items: center;
+    display: flex;       
 }
 
 .small-thumbnail {
@@ -25,14 +29,15 @@
     border-color: fff;
     border: 1px solid #e8ebe4;
     float: left;
-    margin-right: 9px;
-    margin-left: 20px;
-    margin-top: 15px;
+    object-fit: contain;
 }
 
 .icon {
     color: gray;
     font-size: larger;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 
 .chat-cta-button-container {
@@ -43,7 +48,8 @@
     align-items: center;
     justify-content: center;
     display: flex;
-    border: 3rem solid white
+    border: 3rem solid #fff;
+    margin: 1rem solid #e8ebe4;
 }
 
 .chat-cta-button {
@@ -53,13 +59,13 @@
     align-items: center;
     justify-content: center;
     display: flex;
+    font-family: "Roboto", Times, serif;
 }
 
 .user-name {
     font-family: "Roboto", Times, serif;
     color: #1b1f21;
     font-size: larger;
-    margin-top: 20px;
 }
 
 .current-status {
@@ -76,7 +82,8 @@
     width: 100%;
     height: 13%;
     padding: 5px;
-    align-items: center;        
+    align-items: center;
+    flex-direction: column;        
 }
 
 .big-thumbnail {
@@ -87,6 +94,7 @@
     float: left;
     margin-right: 10px;
     align-items: center;
+    object-fit: contain;
 }
 
 .card-header {
@@ -94,6 +102,9 @@
     font-weight: 400;
     padding: 1px 1px;
     align-items: center;
+    text-align: left;
+    justify-content: center;
+    margin-top: 10px;
 }
 
 .card-body {
@@ -101,11 +112,20 @@
     font-weight: 300;
     padding: 2px 2px;
     align-items: center;
+    text-align: left;
+    justify-content: center;
+    margin-top: 3px;
+
 }
 
 .main {
     align-items: center;
     box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
 }
 
 .main h1 {
@@ -117,6 +137,7 @@
 .main h2 {
     font-family: "Open Sans", Times, serif;
     font-weight: 400;
+    font-size: medium;
     align-items: center;
     text-align: center;
 }
